# competitor-price-monitor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: update-prices.yml
src/: app.py  check_prices.py  database.py  scraper.py  utils.py
